--- a/week3/index.html
+++ b/week3/index.html
@@ -31,7 +31,7 @@
 		</ul>
 	</main>
 	<footer>
-		<p>Prepared by: Shuwen Zhou</p>
+		<p>Prepared by: Xiangyu Xu</p>
 		<p>Date: Sep 17 2020</p>
 	</footer>
 </body>
