--- a/halloween_exercises/products/Decription/cat.html
+++ b/halloween_exercises/products/Decription/cat.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Halloween Store</title>
-    <link rel="shortcut icon" href="../images/favicon.ico">
+    <link rel="shortcut icon" href="../../images/favicon.ico">
     <link rel="stylesheet" href="../style/cat.css">
 </head>
 
